oracle/prod/n8n/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
spec:
  type: NodePort
  selector:
    app: n8n
  ports:
    - port: 5678
      targetPort: 443
